--- a/dang_ki.html
+++ b/dang_ki.html
@@ -106,7 +106,7 @@
     </div>
 
     <footer>
-        <p><a href="Ngọc Tấn.html">⬅️ Quay về trang chính</a></p>
+        <p><a href="index.html">⬅️ Quay về trang chính</a></p>
         <p>© Trường THPT Nguyễn Đình Chiểu - Bến Tre</p>
     </footer>
 
