--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <p>❤️ <a href="volunteer.html">Câu lạc bộ Thiện nguyện</a></p>
         <p>📸 <a href="social.html">Câu lạc bộ Truyền thông</a></p>
         <p>📝 <a href="dang_ki.html">Đăng ký tham gia câu lạc bộ</a></p>
-        <p>💡 <a href="Ngọc Tấn.html">Trang chủ</a></p>
+        <p>💡 <a href="index.html">Trang chủ</a></p>
     </div>
 
     <a name="thethao"></a>
     <div class="noidung">
         <h2>⚽ Câu lạc bộ Thể thao</h2>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYpeMgO0fmDyxkp3UoXn-U2X9Xgk57wNwmOA&s" width="300">
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại đầu trang</a></p>
+        <p>⬆️ <a href="index.html">Quay lại đầu trang</a></p>
         <p>👁‍🗨 <a href="sport.html">Xem chi tiết</a></p>
     </div>
 
@@ -100,7 +100,7 @@
     <div class="noidung">
         <h2>❤️ Câu lạc bộ Thiện nguyện</h2>
         <img src="https://scontent.fsgn5-9.fna.fbcdn.net/v/t39.30808-6/577362663_122105230251087852_2174257849401366852_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=rblMUX_wYqsQ7kNvwHOLPc_&_nc_oc=AdkRWTsFu_9SUltblIrODsLWlEl1wKxm0gfTeLFcbYrlwVJkOdqddZe3FjANVrCotKzJmnJY2b5cQcqSuxMONv9q&_nc_zt=23&_nc_ht=scontent.fsgn5-9.fna&_nc_gid=jKlnTKJWjvSoLB1Lo5TGOQ&oh=00_AfodbAzuJT5H_B01tnsNJpYHughwjr5Us290U8XogYQkuw&oe=69655B64" width="300">
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại đầu trang</a></p>
+        <p>⬆️ <a href="index.html">Quay lại đầu trang</a></p>
         <p>👁‍🗨 <a href="volunteer.html">Xem chi tiết</a></p>
     </div>
 
@@ -108,7 +108,7 @@
     <div class="noidung">
         <h2>📸 Câu lạc bộ Truyền thông</h2>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4S3wADy_7a7gVryba4GwQ4sDk0IipsH8APg&s" width="300">
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại đầu trang</a></p>
+        <p>⬆️ <a href="index.html">Quay lại đầu trang</a></p>
         <p>👁‍🗨 <a href="social.html">Xem chi tiết</a></p>
     </div>
 </body>
