--- a/social.html
+++ b/social.html
@@ -103,7 +103,7 @@
         <p>❤️ <a href="volunteer.html">Câu lạc bộ Thiện nguyện</a></p>
         <p>📸 <a href="social.html">Câu lạc bộ Truyền thông</a></p>
         <p>📝 <a href="dang_ki.html">Đăng ký tham gia câu lạc bộ</a></p>
-        <p>💡 <a href="Ngọc Tấn.html">Trang chủ</a></p>
+        <p>💡 <a href="index.html">Trang chủ</a></p>
     </div>
     <a name="truyenthong"></a>
     <div class="noidung">
@@ -114,7 +114,7 @@
             <img src="https://scontent.fsgn5-12.fna.fbcdn.net/v/t39.30808-6/600383194_122115137967087852_6340466760648920638_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_ohc=JxYpu7xXsJoQ7kNvwH81C7O&_nc_oc=AdnJE_csCeh7Ja_nDrHQIk5GT7mvFQzs0WkPElZ9_LKK4jkf3rpEb6_0DdfxhmUvKzuVu6fwfQNHQhMIIK9LjQV6&_nc_zt=23&_nc_ht=scontent.fsgn5-12.fna&_nc_gid=ZCARLc4V3Lz5WzUoFoa8Zw&oh=00_AfqwTkvpeI7PhBNI8KPBIbKzt-q5nTtWaFX3tKND9eVGDQ&oe=696979CD">
         </div>
         <p>Câu lạc bộ Truyền thông là nơi học sinh phát huy khả năng sáng tạo và kỹ năng ghi lại, truyền tải những hoạt động nổi bật của nhà trường. Các thành viên của câu lạc bộ phụ trách chụp ảnh, quay video, viết bài giới thiệu, đưa tin về các sự kiện, hoạt động ngoại khóa, lễ hội hay những chương trình đặc sắc diễn ra trong nhà trường. Thông qua những công việc này, học sinh không chỉ rèn luyện kỹ năng công nghệ, biên tập, viết lách mà còn học cách làm việc nhóm, lên kế hoạch và tổ chức nội dung truyền thông một cách chuyên nghiệp. Đồng thời, sản phẩm của câu lạc bộ giúp lan tỏa hình ảnh năng động, sáng tạo và đầy sức sống của học sinh, góp phần quảng bá hình ảnh của nhà trường đến cộng đồng một cách hiệu quả.</p>
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại trang chủ</a></p>
+        <p>⬆️ <a href="index.html">Quay lại trang chủ</a></p>
     </div>
 </body>
 </html>
