--- a/sport.html
+++ b/sport.html
@@ -103,7 +103,7 @@
         <p>❤️ <a href="volunteer.html">Câu lạc bộ Thiện nguyện</a></p>
         <p>📸 <a href="social.html">Câu lạc bộ Truyền thông</a></p>
         <p>📝 <a href="dang_ki.html">Đăng ký tham gia câu lạc bộ</a></p>
-        <p>💡 <a href="Ngọc Tấn.html">Trang chủ</a></p>
+        <p>💡 <a href="index.html">Trang chủ</a></p>
     </div>
 
     <a name="thethao"></a>
@@ -115,7 +115,7 @@
         </div>
         <h2>⚽ Câu lạc bộ Thể thao</h2>
     <p>Câu lạc bộ Thể thao là nơi tạo điều kiện cho học sinh tham gia rèn luyện sức khỏe một cách thường xuyên và khoa học. Thông qua các hoạt động thể thao đa dạng như bóng đá, bóng chuyền, cầu lông…, học sinh không chỉ nâng cao thể lực mà còn rèn luyện tinh thần kỷ luật, ý chí vượt khó và sự bền bỉ. Bên cạnh đó, các buổi sinh hoạt và thi đấu của câu lạc bộ còn giúp các thành viên tăng cường tinh thần đoàn kết, học cách làm việc nhóm, giao lưu học hỏi lẫn nhau, từ đó tạo nên môi trường học đường năng động, lành mạnh và tích cực..</p>
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại trang chủ</a></p>
+        <p>⬆️ <a href="index.html">Quay lại trang chủ</a></p>
     </div>
 </body>
 </html>
