--- a/volunteer.html
+++ b/volunteer.html
@@ -103,7 +103,7 @@
         <p>❤️ <a href="volunteer.html">Câu lạc bộ Thiện nguyện</a></p>
         <p>📸 <a href="social.html">Câu lạc bộ Truyền thông</a></p>
         <p>📝 <a href="dang_ki.html">Đăng ký tham gia câu lạc bộ</a></p>
-        <p>💡 <a href="Ngọc Tấn.html">Trang chủ</a></p>
+        <p>💡 <a href="index.html">Trang chủ</a></p>
     </div>
     <a name="thiennguyen"></a>
     <div class="noidung">
@@ -114,7 +114,7 @@
         </div>
         <h2>❤️ Câu lạc bộ Thiện nguyện</h2>
         <p>Câu lạc bộ Thiện nguyện là nơi khuyến khích học sinh tham gia vào các hoạt động vì cộng đồng, hướng tới việc giúp đỡ những người có hoàn cảnh khó khăn, bất hạnh trong xã hội. Thông qua các chương trình như quyên góp quần áo, sách vở, thực phẩm, hay tham gia thăm hỏi, chăm sóc các cụ già neo đơn, trẻ em mồ côi, học sinh không chỉ trải nghiệm niềm vui khi sẻ chia mà còn học được những giá trị nhân văn quan trọng như lòng nhân ái, sự đồng cảm và tinh thần trách nhiệm. Những hoạt động này giúp các em hình thành thái độ sống tích cực, biết trân trọng những gì mình đang có, đồng thời lan tỏa năng lượng tốt đẹp đến cộng đồng xung quanh, góp phần xây dựng một môi trường học đường đầy tình thương và sẻ chia.</p>
-        <p>⬆️ <a href="Ngọc Tấn.html">Quay lại trang chủ</a></p>
+        <p>⬆️ <a href="index.html">Quay lại trang chủ</a></p>
     </div>
 </body>
 </html>
